...
                tools:text="@string/login_with_password_message"
                android:layout_marginVertical="15dp"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default_quarter"
                android:layout_marginEnd="@dimen/margin_default_quarter"
                android:layout_marginStart="@dimen/margin_default_quarter"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_width="match_parent"
...
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_below="@id/email_field_and_message_container"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_quarter"
            android:layout_marginEnd="@dimen/margin_default_quarter"
            android:layout_marginStart="@dimen/margin_default_quarter"
            android:layout_marginTop="@dimen/margin_default_quarter"
...
                android:layout_width="match_parent">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:backgroundTint="@color/button_primary_disabled_selector"
            android:layout_below="@id/input_password"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_quarter"
            android:layout_marginTop="@dimen/margin_default_quarter"
            android:layout_width="match_parent"
...
