...
    <string name="delete_account_email_message">By deleting the account for email %1$s, all notes created with this account will be permanently deleted. This action is not reversible.</string>
    <string name="request_received">Request Received</string>
    <string name="account_deletion_message">An email was sent to %1$s. Check your inbox and follow the instructions to confirm account deletion.\n\nYour account won\'t be deleted until we receive your confirmation.</string>
    <string name="error_ocurred_message">An error occurred. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="requesting_message">Requesting…</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="tag_added_as_collaborator">%1$s added as a collaborator.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_error_empty">Tags cannot be empty</string>
...

    <!-- Themes -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_auto">Dark at night only</string>
    <string name="theme_system">System default</string>
    <string name="theme">Theme</string>

    <!-- About screen -->
    <string name="about">About</string>
    <string name="about_copyright">&#169; Automattic %1$d</string>
    <string name="about_contribute_subtitle">github.com</string>
    <string name="about_contribute_title">Contribute</string>
...
    <!-- PASSCODE -->
    <string name="passcode_change_passcode">Change passcode</string>
    <string name="passcode_enter_old_passcode">Enter your old passcode</string>
    <string name="passcode_preference_title">Passcode Lock</string>
    <string name="passcode_re_enter_passcode">Confirm your passcode</string>
    <string name="passcode_summary">Screenshots are disabled while passcode lock is on</string>
    <string name="passcode_turn_off">Turn passcode lock off</string>
    <string name="passcode_turn_on">Turn passcode lock on</string>
    <string name="passcode_wrong_passcode">Wrong passcode, please try again.</string>
    <string name="passcodelock_prompt_message">Enter your passcode</string>

    <!-- SHORTCUTS -->
    <string name="action">Action</string>
...
