...
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/padding_small"
    android:paddingTop="@dimen/padding_small"
    tools:background="@color/background_dark">

    <RelativeLayout
        android:id="@+id/note_status"
        android:layout_alignBottom="@id/note_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_small"
        android:layout_width="wrap_content"
        android:visibility="gone"
...
