<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_parent_view"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar">
    </include>

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/preferences_container"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <include layout="@layout/iap_banner" />

            <include layout="@layout/iap_thank_you_banner" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
